hopefully scroll-snap is fixed on mobile now

--- a/assets/styles/pages/_landing.scss
+++ b/assets/styles/pages/_landing.scss
@@ -20,7 +20,7 @@
 }
 
 .scroll-section {
-  height: 200vh;
+  height: 50vh;
   margin: 0;
   padding: 0;
 }
