--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -215,7 +215,7 @@ main {
 }
 
 .scroll-section {
-  height: 200vh;
+  height: 50vh;
   margin: 0;
   padding: 0;
 }
